force-app/main/default/objects/Notifiche__c/fields/Articolo__c.field-meta.xml
<CustomField>
    <fullName>Articolo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Se collegato all&apos;articolo</description>
    <label>Articolo</label>
    <referenceTo>Articolo__c</referenceTo>
    <relationshipLabel>Notifiche</relationshipLabel>
    <relationshipName>Notifiche</relationshipName>
    <type>Lookup</type>
</CustomField>