force-app/main/default/objects/Notifiche__c/fields/Commento__c.field-meta.xml
<CustomField>
    <fullName>Commento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Notifica ad un commento</description>
    <label>Commento</label>
    <referenceTo>Utente_Articolo__c</referenceTo>
    <relationshipLabel>Notifiche</relationshipLabel>
    <relationshipName>Notifiche</relationshipName>
    <type>Lookup</type>
</CustomField>