force-app/main/default/objects/Notifiche__c/fields/Tipologia__c.field-meta.xml
<CustomField>
    <fullName>Tipologia__c</fullName>
    <description>Tipologia della notifica</description>
    <label>Tipologia</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Domanda</fullName>
                <default>true</default>
                <label>Domanda</label>
            </value>
            <value>
                <fullName>Articolo</fullName>
            </value>
            <value>
                <fullName>Commento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>