force-app/main/default/objects/Notifiche__c/fields/Titolo__c.field-meta.xml
<CustomField>
    <fullName>Titolo__c</fullName>
    <label>Titolo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>